Point frontend at Render API base

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,9 @@
     </footer>
   </div>
 
+  <script>
+    window.__API_BASE__ = "https://nirmaan-communication-scorer.onrender.com";
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
