Update frontend to use Railway backend URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <script>
-    window.__API_BASE__ = "https://nirmaan-communication-scorer.onrender.com";
+    window.__API_BASE__ = "https://nirmaan-communication-scorer-production.up.railway.app";
   </script>
   <script src="script.js"></script>
 </body>
